@@ -106,6 +106,8 @@ class CGI
         MapStringVector::const_iterator begin();
         MapStringVector::const_iterator end();
 
+        std::string param1(std::string const &variable) const;
+
     // static members:
                                     // unpercent also does the '+' to ' '
                                     // conversion 
