@@ -1,3 +1,11 @@
+bobcat (3.13.00)
+
+  * Added new member CGI::param1
+
+  * Updated CGI documentation
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 25 Apr 2013 16:42:05 +0200
+
 bobcat (3.12.00)
 
   * Added class Exception, obsoleting class Errno. 
